Kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamo-web
  namespace: dynamo
  labels:
    app: dynamo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamo-web
  template:
    metadata:
      labels:
        app: dynamo-web
    spec:
      serviceAccountName: dynamo-web
      containers:
        - name: dynamo-web
          image: 477374169746.dkr.ecr.us-east-2.amazonaws.com/test-dynamo-repository:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
