Kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamo-web
  namespace: dynamo
  labels:
    app: dynamo-web
spec:
  type: ClusterIP
  selector:
    app: dynamo-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
